Layout issues fixed

--- a/mcidashboard/mcidashboard-front/src/css/overview.css
+++ b/mcidashboard/mcidashboard-front/src/css/overview.css
@@ -165,6 +165,7 @@
     padding-bottom: 5px;
     margin-bottom: 30px;
     margin-top: 30px;
+    align-self: start;
 }
 
 #prediction-title {
